--- a/SitecoreLearnings.Web/SitecoreLearnings.Web.csproj
+++ b/SitecoreLearnings.Web/SitecoreLearnings.Web.csproj
@@ -12,7 +12,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>SitecoreLearnings.Web</RootNamespace>
-    <AssemblyName>SitecoreLearnings.Web</AssemblyName>
+    <AssemblyName>SitecoreLearnings.Webl</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <UseIISExpress>true</UseIISExpress>
     <IISExpressSSLPort />
