Files to gitignore
Files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,5 @@ SitecoreLearnings.Web/App_Config/Include/EventHandler.config.example
 *.example
 SitecoreLearnings.Web/bin/Sitecore.Client.dll
 SitecoreLearnings.Web/obj/Debug/AspnetCompileMerge/Source/bin/Sitecore.Kernel.dll
+SitecoreLearnings.Web/obj/Debug/SitecoreLearnings.Webl.pdb
+SitecoreLearnings.Web/obj/Debug/SitecoreLearnings.Webl.dll
